# LiHongYi-JiBang-DAIKIN

./: README.md
2020/HW/: pyproject.toml
2020/HW/1-Regression/: hw1_report.docx  regression.ipynb
2020/HW/1-Regression/python_tool_practice/: np_empty.py  np_mean.py  np_reshape.py  np_std.py  pandas_practice.py
