[tool.poetry]
name = "hw"
version = "0.1.0"
description = ""
authors = ["swenbao <essence.lost.0b@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.0"
ipykernel = "^6.29.0"
pyarrow = "^15.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
